correct some typos

--- a/documents/paper.Rmd
+++ b/documents/paper.Rmd
@@ -33,7 +33,7 @@ We collected abstracts from Society of American Archaeology (SAA) annual meeting
 For image-based pdfs, we convert them into PNG files, clean up the images using Magick package, and then extract the text using Tesseract package [@Kay2007] for optical character recognition (OCR). We obtain 95-98 percent accuracy of OCR on a word level across years according to the results of error rate for each year. After the text are ready, we use quanteda package for text managing and analyzing [@Benoit2018]. We clean up the text by removing all punctuation and stop words, such as "the", "an", "a", that might have some impacts on our results.
 
 - word embeddings (cite our readings)
-Word embeddings is useful tool based machine learning framework for measurement, quantifying, and comparing the semantic relations between words, which enables a wide range of application for temporal changes in word relationships related to the sociocultural domain [@Garg2018; @Kozlowski2019]. There are two major word-level pretrained word embeddings, Weod2Vec and Glove according to different methods [@Rong2014; @Pennington2014]. Since pretrained word embeddings are trained on large corpus such as Google News, they can capture the semantic meaning  of a word very well. 
+Word embeddings is useful tool based machine learning framework for measurement, quantifying, and comparing the semantic relations between words, which enables a wide range of application for temporal changes in word relationships related to the sociocultural interests [@Garg2018; @Kozlowski2019]. There are two major word-level pretrained word embeddings, Word2Vec and Glove according to different methods used for training [@Rong2014; @Pennington2014]. Since pretrained word embeddings are trained on large corpus such as Google News, they can capture the semantic meaning of a word very well. 
 
 In this article, we use text2vec package [@Selivanov2016] to train the word embeddings using GloVe model, which calculates the occurrence of a pair of words and creates the co-occurrence matrix. 
 
