--- a/documents/references.bib
+++ b/documents/references.bib
@@ -1,3 +1,11 @@
+@book{trigger1989history,
+  title={A history of archaeological thought},
+  author={Trigger, Bruce G},
+  year={1989},
+  publisher={Cambridge University Press}
+}
+
+
 @article{Benoit2018,
   title={quanteda: An R package for the quantitative analysis of textual data},
   author={Benoit, Kenneth and Watanabe, Kohei and Wang, Haiyan and Nulty, Paul and Obeng, Adam and M{\"u}ller, Stefan and Matsuo, Akitaka},
