add code chunk for in-line code and one references

--- a/documents/references.bib
+++ b/documents/references.bib
@@ -69,3 +69,13 @@
   journal={arXiv preprint arXiv:1411.2738},
   year={2014}
 }
+
+@article{Holley2009,
+  title={How good can it get? Analysing and improving OCR accuracy in large scale historic newspaper digitisation programs},
+  author={Holley, Rose},
+  journal={D-Lib Magazine},
+  volume={15},
+  number={3/4},
+  year={2009},
+  publisher={D-Lib Magazine}
+}
