--- a/documents/paper.Rmd
+++ b/documents/paper.Rmd
@@ -29,9 +29,16 @@ Among historians of archaeology there are two major phases in  ‘critical histo
 
 - source of the data
 
-The data for our study comes from the text of oral and poster presentation abstracts presented at the annual meetings of the Society of American Archaeology (SAA). The earliest meeting in our data is 19XX, and we have some years missing, especially XXXX-XXXX. The total number of abstracts is 68,176 (xxx words) from 40 annual meetings. We obtained PDF files of annual programs from https://www.saa.org/annual-meeting/annual-meeting-archives/program-archives. 
+```{r read-data}
+saa_data <- readxl::read_excel(here::here("data", "raw-data", "saa-abstracts-tally.xlsx"))
+abstract_num <- sum(saa_data$number_of_abstracts, na.rm = TRUE)
+year_num <- length(which(!is.na(saa_data$number_of_abstracts)))
+```
 
-The PDFs for the years XXXX-XXXX contain images of pages, and after 2005 the PDFs are searchable text. We converted the page images from PDF to PNG files using ImageMagick software, and then used optical character recognition to extract text from the PNG files with the Tesseract package [@Kay2007]. We obtained an acceptable rate of 95-98% word-level OCR accuracy across the PDFs [citation]. After OCR, we used the quanteda package  [@Benoit2018] to remove punctuation, numbers, and stopwords, such as "the", "an", "a", [specifically why do we remove stopwords?]. 
+
+The data for our study comes from the text of oral and poster presentation abstracts presented at the annual meetings of the Society of American Archaeology (SAA). The earliest meeting in our data is 1962, and we have some years missing, especially 1995-2003. The total number of abstracts is `r abstract_num` (xxx words) from `r year_num` annual meetings. We obtained PDF files of annual programs from https://www.saa.org/annual-meeting/annual-meeting-archives/program-archives. 
+
+The PDFs for the years 1962-1994 contain images of pages, and after 2005 the PDFs are searchable text. We converted the page images from PDF to PNG files using ImageMagick software, and then used optical character recognition to extract text from the PNG files with the Tesseract package [@Kay2007]. We obtained an acceptable rate of 95-98% word-level OCR accuracy across the PDFs [@Holley2009]. After OCR, we used the quanteda package  [@Benoit2018] to remove punctuation, numbers, and stopwords, such as "the", "an", "a", with little or no semantic meanings. 
 
 - something about basic steps
 -- transform text into dfm, define dfm... 
