--- a/documents/paper.Rmd
+++ b/documents/paper.Rmd
@@ -40,19 +40,122 @@ The data for our study comes from the text of oral and poster presentation abstr
 
 The PDFs for the years 1962-1994 contain images of pages, and after 2005 the PDFs are searchable text. We converted the page images from PDF to PNG files using ImageMagick software, and then used optical character recognition to extract text from the PNG files with the Tesseract package [@Kay2007]. We obtained an acceptable rate of 95-98% word-level OCR accuracy across the PDFs [@Holley2009]. After OCR, we used the quanteda package  [@Benoit2018] to remove punctuation, numbers, and stopwords, such as "the", "an", "a", due to their little or no semantic meanings. 
 
-- something about basic steps
--- transform text into dfm, define dfm... 
+- Basic steps for matrix construction
 
-- word embeddings (cite our readings)
--- a few sentences to introduce the reader to how WE have been used in other recent studies. this is a little bit background. '...recently used in many social science fields to...' tell the reader what was the finding of some key studies using WE that have inspired us. 
+We transform text into a document-feature matrix (dfm), where rows represent PDFs and columns represent features, the terms extracted from PDFs, and values are frequencies of certain features for each PDFs. We selected the features that occur at least three times for later construction of a word co-occurrence matrix. In this article, we trained word embeddings with the GloVe model using th text2vec package [@Selivanov2016]. The GloVe model calculates how often one word appear with the presence of another word to construct a co-occurrence matrix. This method involves setting an area defined by window in which we can detect the context terms with the target term in the middle position. 
 
 <!-- There are two major word-level pretrained word embeddings, Word2Vec and Glove according to different methods used for training [@Rong2014; @Pennington2014]. --> 
 
--- then some more detail about the mechanics of the method, as we are using it. Say how what we did works in general. 
-
-In this article, we trained word embeddings with the GloVe model using th text2vec package [@Selivanov2016]. The GloVe model calculates ... creates the co-occurrence matrix. 
-
 - temporal referencing plots (cite our readings)
+The word embeddings method is applied to explore temporal changes of vectors to present a historical trend. For example, @Garg2018 explore the historical trends in stereotypes and attitudes toward women and ethnic minorities in the 20th and 21st centuries in the US. They found both gender and ethnic occupation biases significantly correlated with the actual occupation participation rates. Those changes by negative words in the descriptions of genders and ethnic groups over time are associated with the women’s movement in the 1960s–1970s and Asian-American population growth in the 1960s and 1980s. Another study , @Kozlowski analyze the cultural dimensions of social class and how they evolve over the twentieth century in the US. They found the relationships between the cultural dimensions of class remain stable semantic structure over the century, but the individual words, such as employment, status, education, cultivation, on those dimensions shift over the decades. They also found affluence and status serve as cultural mediators between two clusters, education, cultivation, and morality on one side, and employment and ownership on the other side.
+
+
+```{r temporal referencing plots}
+# Words per year
+
+library(tidyverse)
+
+# starting with https://quanteda.io/articles/quickstart.html
+library("quanteda")
+
+# get all txt files of abstracts
+abstract_txt_files <- 
+  fs::dir_ls(here::here("data/derived-data/"), 
+             recurse = TRUE, 
+             regexp = '\\.txt$')
+
+all_txts <- tolower(readtext::readtext(abstract_txt_files))
+names(all_txts) <- map_chr(names(all_txts), ~str_match_all(.x, "\\d{4}")[[1]][1,1])
+
+# word count checking
+all_txts_word_count_per_year <- 
+map_int(all_txts, 
+       stringi::stri_count_words) %>% 
+  stack %>% 
+  as_tibble() %>% 
+  rename(words = values,
+         year = ind) %>% 
+  mutate(year = as.numeric(as.character(year)))
+
+# count all words for each year
+all_txts_c <- corpus(all_txts)
+all_txts_c_summary <- 
+  summary(all_txts_c) %>%   
+  mutate(year = parse_number(Text))
+  
+# make a dfm
+all_txts_c_dtm <- 
+  dfm(all_txts_c,
+      remove_punct = TRUE)
+
+# plot of all words in each year
+plot_all_words <- 
+  ggplot(data = all_txts_c_summary, 
+         aes(x = year , 
+             y = Tokens / 1000, 
+             group = 1)) +
+  geom_col() +
+  scale_x_continuous(labels = c(seq(1940, 2020, 2)), 
+                     breaks = seq(1940, 2020, 2),
+                     name = "Year") +
+  scale_y_continuous(name = "Total word count per year (x 1,000)",
+                     labels = scales::comma) +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 90, 
+                                   vjust = 0.5)) 
+  
+# Our key words over time
+  
+keywords <- 
+  c("mechanism", 
+    "theory", 
+    "hypothesis", 
+    "model", 
+    "inference")
+
+dfm_keywords <- 
+  dfm_select(all_txts_c_dtm, 
+             pattern = keywords, 
+             selection = "keep")
+
+dfm_keywords_tbl <- 
+  convert(dfm_keywords, to = "data.frame") %>% 
+  pivot_longer(-document, 
+               names_to = "keyword",
+               values_to = "n") %>% 
+  mutate(year = parse_number(document))
+
+# compute proportion of all words per year
+dfm_keywords_tbl_prop <- 
+dfm_keywords_tbl %>% 
+  left_join(all_txts_c_summary) %>% 
+  mutate(prop = n / Tokens ) %>% 
+  group_by(keyword) %>% 
+  mutate(sum_the_word = sum(n)) %>% 
+  mutate(keyword_n = str_c(keyword, " (n = ", sum_the_word, ")"))
+
+# plot of keywords as a proportion of all words per year
+ggplot(data = dfm_keywords_tbl_prop, 
+       aes(x = year , 
+           y = prop)) +
+  geom_point(alpha = 0.3) +
+  geom_smooth(span = 0.475,
+              se = FALSE) +
+  facet_wrap( ~ keyword_n, 
+              ncol = 1,
+             scales = "free_y") +
+  scale_x_continuous(labels = c(seq(1960, 2020, 2)), 
+                     breaks = seq(1960, 2020, 2),
+                     name = "Year") +
+  scale_y_continuous(name = "Proportion of all words in all abstracts per year",
+                     labels = scales::comma) +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 90, 
+                                   vjust = 0.5)) 
+
+```
+
+
 
 # Results
 
