--- a/documents/paper.Rmd
+++ b/documents/paper.Rmd
@@ -37,11 +37,23 @@ For example, @Garg2018 explored how stereotypes and attitudes toward women and e
 
 ```{r read-data}
 saa_data <- readxl::read_excel(here::here("data", "raw-data", "saa-abstracts-tally.xlsx"))
+
+# basic stats
+library(tidyverse)
 abstract_num <- sum(saa_data$number_of_abstracts, na.rm = TRUE)
-year_num <- length(which(!is.na(saa_data$number_of_abstracts))) # 41 years vs 40
+year_num <- length(which(!is.na(saa_data$number_of_abstracts))) # 41 years
+
+# get all txt files of abstracts
+abstract_txt_files <- 
+  fs::dir_ls(here::here("data/derived-data/"), 
+             recurse = TRUE, 
+             regexp = '\\.txt$')
+all_txts <- tolower(readtext::readtext(abstract_txt_files))
+
+all_word_counts <- sum(stringi::stri_count_words(all_txts))
 ```
 
-LW: The data for our study comes from the text of abstracts of oral and poster presentations at the annual meetings of the Society of American Archaeology (SAA). The earliest meeting in our data is 1962, and we have some years missing, especially 1995-2003 where PDF files were not available to us. The total number of abstracts is `r prettyNum(abstract_num, big.mark = ",")` (xxx words) from `r year_num` annual meetings. We obtained PDF files of annual programs from https://www.saa.org/annual-meeting/annual-meeting-archives/program-archives. 
+LW: The data for our study comes from the text of abstracts of oral and poster presentations at the annual meetings of the Society of American Archaeology (SAA). The earliest meeting in our data is 1962, and we have some years missing, especially 1995-2003 where PDF files were not available to us. The total number of abstracts is `r prettyNum(abstract_num, big.mark = ",")` (`r prettyNum(all_word_counts, big.mark = ",")` words) from `r year_num` annual meetings. We obtained PDF files of annual programs from https://www.saa.org/annual-meeting/annual-meeting-archives/program-archives. 
 
 LW: The PDFs for the years 1962-1994 contain images of pages, and after 2005 the PDFs are searchable text. We converted the page images from PDF to PNG files using ImageMagick software, and then used optical character recognition to extract text from the PNG files with the Tesseract package [@Kay2007]. We obtained an acceptable rate of 95-98% word-level OCR accuracy across the PDFs [@Holley2009]. After OCR, we removed punctuation, numbers, and stopwords, such as "the", "an", "a", due to their little or no semantic value for our research question, with the quanteda package [@Benoit2018]. 
 
