update background and method section

--- a/documents/paper.Rmd
+++ b/documents/paper.Rmd
@@ -29,9 +29,9 @@ BM: Among historians of archaeology there are two major phases in  ‘critical h
 
 - background to Word embeddings
 
-For example, @Garg2018 explored how stereotypes and attitudes toward women and ethnic minorities changed through 20th and 21st centuries in the US. <!-- how?-->  They found both gender and ethnic occupation biases significantly correlated with the actual occupation participation rates. Those changes by negative words in the descriptions of genders and ethnic groups over time are associated with the women’s movement in the 1960s–1970s and Asian-American population growth in the 1960s and 1980s. 
+LW: Word embeddings are an effective way to analyze the temporal changes of any target word, which is represented by a group of words sharing close semantic relations with it. Word embeddings needs to be trained on a corpus, a collection of texts, for later calculation of the relations between words according to their distance in texts. This method allows us to explore the changing meaning of words of interest accompanied with their social or cultural background to understand the historical trend. For example, @Garg2018 explored changes in gender stereotypes and attitudes toward ethnic minorities in the 20th and 21st centuries in the US. They created word lists to represent gender and ethnicity as target words, and neutral words, such as adjectives and jobs, serving as indicators for stereotypes and attitudes. With word embeddings, they compared the association between each group and neutral words, where the strength of association is calculated by computing average embedding distance. They found there is a job bias for both gender and ethnic minority, such as and this bias is significantly correlated with the actual participation rates. In addition, there is bias towards  decreases of bias reflected by adjectives for ethnic minority and gender are associated with the women’s movement in the 1960s–1970s and Asian-American population growth in the 1960s and 1980s. 
 
-@Kozlowski analyzed the cultural dimensions of social class and how they evolved over the twentieth century in the US. <!-- how?--> They found the relationships between the cultural dimensions of class remain stable over the century, but the individual words, such as employment, status, education, cultivation, on those dimensions shift over the decades. <!-- for example ?--> They also found affluence and status serve as cultural mediators between two clusters <!-- of what? -->, education, cultivation, and morality on one side, and employment and ownership on the other side. <!-- I fear this is too abstract for our reader to grasp -->
+Another example shows how we can use it to explore changes in the definition of social class. @Kozlowski analyzed the cultural dimensions of social class over the 20th century in the US. <!-- how?--> They found the relationships between the cultural dimensions of class remain stable over the century, but the individual words, such as employment, status, education, cultivation, on those dimensions shift over the decades. <!-- for example ?--> They also found affluence and status serve as cultural mediators between two clusters <!-- of what? -->, education, cultivation, and morality on one side, and employment and ownership on the other side. <!-- I fear this is too abstract for our reader to grasp -->
 
 # Methods
 
@@ -57,13 +57,14 @@ LW: The data for our study comes from the text of abstracts of oral and poster p
 
 LW: The PDFs for the years 1962-1994 contain images of pages, and after 2005 the PDFs are searchable text. We converted the page images from PDF to PNG files using ImageMagick software, and then used optical character recognition to extract text from the PNG files with the Tesseract package [@Kay2007]. We obtained an acceptable rate of 95-98% word-level OCR accuracy across the PDFs [@Holley2009]. After OCR, we removed punctuation, numbers, and stopwords, such as "the", "an", "a", due to their little or no semantic value for our research question, with the quanteda package [@Benoit2018]. 
 
-LW: We transformed the cleaned text into a document-feature matrix. This is a rectangular, tabular data structure where one row represents one PDF, and one column represents one word, also known as a feature. The cell values in this matrix are the frequencies of each feature for each PDF. We selected the features that occur at least three times across all PDFs for construction of a feature co-occurrence matrix. To create this matrix we calculated how often each feature appears with another. This method involves setting an area defined by window in which we can detect the context terms with the target term in the middle position.  <!-- clarify and describe more fcm and window --> 
+LW: We transformed the cleaned text into a document-feature matrix. This is a rectangular, tabular data structure where one row represents one PDF, and one column represents one word, also known as a feature. The cell values in this matrix are the frequencies of each feature for each PDF. We selected the features that occur at least three times across all PDFs for construction of a feature co-occurrence matrix. To create this matrix we calculated how often each feature appears with another. The co-occurrences is measured within a defined range, called a window, with the target feature in the middle position and context features next to it. Here we set the range to five that means five words before and after the target feature as the framework for calculation of co-occurrence counts. 
 
-We trained word embeddings with the GloVe model using the text2vec package [@Selivanov2016]. 
+LW: We trained the word embeddings on the co-occurrence matrix by GloVe model using the text2vec package [@Selivanov2016]. GloVe (Global Vectors) is a learning model trained on global information, in our case is the co-occurrence matrix from abtract corpus, to capture word vectors, a group of words, as a representation of a target word. The underlying principle is that GloVe algorithm converts co-occurrence counts to probabilities ratios for words of interest. 
+
 
 <!-- There are two major word-level pretrained word embeddings, Word2Vec and Glove according to different methods used for training [@Rong2014; @Pennington2014]. --> 
 
-LW: We investigated a historical trends in word meanings by visualizing the word embeddings generated by the GloVe method. ...
+
 
 
 # Results
