udpate background and add para about GloVe

--- a/documents/references.bib
+++ b/documents/references.bib
@@ -79,3 +79,11 @@
   year={2009},
   publisher={D-Lib Magazine}
 }
+
+@inproceedings{Pennington2014,
+  title={Glove: Global vectors for word representation},
+  author={Pennington, Jeffrey and Socher, Richard and Manning, Christopher D},
+  booktitle={Proceedings of the 2014 conference on empirical methods in natural language processing (EMNLP)},
+  pages={1532--1543},
+  year={2014}
+}
