--- a/documents/paper.Rmd
+++ b/documents/paper.Rmd
@@ -29,9 +29,9 @@ BM: Among historians of archaeology there are two major phases in  ‘critical h
 
 - background to Word embeddings
 
-LW: Word embeddings are an effective way to analyze the temporal changes of any target word, which is represented by a group of words sharing close semantic relations with it. Word embeddings needs to be trained on a corpus, a collection of texts, for later calculation of the relations between words according to their distance in texts. This method allows us to explore the changing meaning of words of interest accompanied with their social or cultural background to understand the historical trend. For example, @Garg2018 explored changes in gender stereotypes and attitudes toward ethnic minorities in the 20th and 21st centuries in the US. They created word lists to represent gender and ethnicity as target words, and neutral words, such as adjectives and jobs, serving as indicators for stereotypes and attitudes. With word embeddings, they compared the association between each group and neutral words, where the strength of association is calculated by computing average embedding distance. They found there is a job bias for both gender and ethnic minority, such as and this bias is significantly correlated with the actual participation rates. In addition, there is bias towards  decreases of bias reflected by adjectives for ethnic minority and gender are associated with the women’s movement in the 1960s–1970s and Asian-American population growth in the 1960s and 1980s. 
+LW: Word embeddings are an effective way to analyze the temporal changes of any target word, which is represented by a group of words sharing close semantic relations with it. Word embeddings needs to be trained on a corpus, a collection of texts, for later calculation of the relations between words according to their distance in texts. This method allows us to explore the changing meaning of words of interest accompanied with their social or cultural background to understand the historical trend. For example, @Garg2018 explored changes in gender stereotypes and attitudes toward ethnic minorities in the 20th and 21st centuries in the US. They created word lists to represent gender and ethnicity as target words, and neutral words, such as adjectives and jobs, serving as indicators for stereotypes and attitudes. With word embeddings, they compared the association between each group and neutral words, where the strength of association is calculated by computing average embedding distance. They found there is a job bias for both gender and ethnic minority, such as and this bias is significantly correlated with the actual participation rates. In addition, there is bias towards  decreases of bias reflected by adjectives for ethnic minority and gender are associated with the women’s movement in the 1960s–1970s and Asian-American population growth in the 1960s and 1980s. This study demonstrates a successful application of word embeddings to detect social bias and correlate the findings with historical events.
 
-Another example shows how we can use it to explore changes in the definition of social class. @Kozlowski analyzed the cultural dimensions of social class over the 20th century in the US. <!-- how?--> They found the relationships between the cultural dimensions of class remain stable over the century, but the individual words, such as employment, status, education, cultivation, on those dimensions shift over the decades. <!-- for example ?--> They also found affluence and status serve as cultural mediators between two clusters <!-- of what? -->, education, cultivation, and morality on one side, and employment and ownership on the other side. <!-- I fear this is too abstract for our reader to grasp -->
+LW: Another example shows how word embeddings is effective by exploring the historical view on shared understandings of social classes in the 20th century in the US. @Kozlowski first compared the cultural dimensions created by word embeddings with a defined word lists showing cultural differences, such as rich-poor. The high association suggests that word embedding is a useful way to investigate people's views about social classes. They explored the relationship between dimensions of class identified in sociological theory, including morality, status, education, cultivation, gender, and employment. They found there is a high correlation between dimensions of education, cultivation, and morality, which corresponds to the owner/worker relation defined by classic Marxian. In addition, they found a stable relationships between different cultural dimensions of class over the century even there was a major shifts in the condition of economy, industry, and employment in the present day. This case study indicates the robustness of word embeddings as a method to examine the historical trend on social classes. 
 
 # Methods
 
@@ -59,7 +59,12 @@ LW: The PDFs for the years 1962-1994 contain images of pages, and after 2005 the
 
 LW: We transformed the cleaned text into a document-feature matrix. This is a rectangular, tabular data structure where one row represents one PDF, and one column represents one word, also known as a feature. The cell values in this matrix are the frequencies of each feature for each PDF. We selected the features that occur at least three times across all PDFs for construction of a feature co-occurrence matrix. To create this matrix we calculated how often each feature appears with another. The co-occurrences is measured within a defined range, called a window, with the target feature in the middle position and context features next to it. Here we set the range to five that means five words before and after the target feature as the framework for calculation of co-occurrence counts. 
 
-LW: We trained the word embeddings on the co-occurrence matrix by GloVe model using the text2vec package [@Selivanov2016]. GloVe (Global Vectors) is a learning model trained on global information, in our case is the co-occurrence matrix from abtract corpus, to capture word vectors, a group of words, as a representation of a target word. The underlying principle is that GloVe algorithm converts co-occurrence counts to probabilities ratios for words of interest. 
+LW: We trained the word embeddings on the co-occurrence matrix by GloVe model using the text2vec package [@Pennington2014; @Selivanov2016]. GloVe (Global Vectors) is a learning model that creates word vectors to represent semantic regularity and capture relationships between words [@Pennington2014; @Garg2018]. A word vector can be thought as a point with direction in a space, and it has multiple dimension associated with other word vectors. The distance between word vectors is measured by their various dimensions of difference, representing their semantic meanings. The difference is computed based on their co-occurrence probabilities converted from  co-occurrence matrix. This idea is similar to the concept of Principal Component Analysis (PCA). A dimension consists of words with its scale and direction can be analogous to a dimension generated by Principal Component Analysis. The words located on the two ends present the largest semantic distance represented by values. The more dimensions, the more accurate semantic meanings can be captured. In our case, we use 50 dimensions. 
+
+LW: We then visualize the values across different dimensions to explore the historical trend of word meanings related to disciplinary change in archaeology. We created a word list, including theory, inference, mechanism, explanation, hypothesis, to explore how they changes in their meaning or use since 1962. We compare the word embeddings at a interval of ten years.
+
+
+
 
 
 <!-- There are two major word-level pretrained word embeddings, Word2Vec and Glove according to different methods used for training [@Rong2014; @Pennington2014]. --> 
